# CPU_consumption

./: .gitignore  BaseWorker.cpp  BaseWorker.h  CMakeLists.txt  Constants.h  Container.h  CoresConsumption.cpp  CoresConsumption.h  README.md  Shader.cpp  Shader.h  TotalConsumption.cpp  TotalConsumption.h  main.cpp
.github/workflows/: cmake-build.yml  macos-cmake-build.yml  main.yml
3rdParties/glew/2.2.0_1/: INSTALL_RECEIPT.json
3rdParties/glfw/3.3.3/: INSTALL_RECEIPT.json
3rdParties/glfw/3.3.3/.brew/: glfw.rb
3rdParties/glfw/3.3.3/lib/pkgconfig/: glfw3.pc
CPU_consumption/Consumption/: BaseWorker.cpp  BaseWorker.h  ConsumptionManager.cpp  ConsumptionManager.h  CoresConsumption.cpp  CoresConsumption.h  TotalConsumption.cpp  TotalConsumption.h
CPU_consumption/Shader/: Shader.cpp  Shader.h
CPU_consumption/Utilities/: Constants.h  Container.h
